force-app/main/default/objects/Order_Itinerary__c/Order_Itinerary__c.object-meta.xml
<CustomObject>
    <label>Order Itinerary</label>
    <nameField>
        <displayFormat>OI{00000000}</displayFormat>
        <label>Order Itinerary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Itineraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>