force-app/main/default/objects/Order_Itinerary__c/fields/day__c.field-meta.xml
<CustomField>
    <fullName>day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day</label>
    <referenceTo>Day__c</referenceTo>
    <relationshipLabel>Order Itineraries</relationshipLabel>
    <relationshipName>Order_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>