force-app/main/default/objects/Order_Itinerary__c/fields/Day_Details__c.field-meta.xml
<CustomField>
    <fullName>Day_Details__c</fullName>
    <label>Day Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>