force-app/main/default/objects/Order_Itinerary__c/fields/Day_Meals__c.field-meta.xml
<CustomField>
    <fullName>Day_Meals__c</fullName>
    <label>Day Meals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Lunch or Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>