force-app/main/default/objects/Order_Itinerary__c/fields/day_number__c.field-meta.xml
<CustomField>
    <fullName>day_number__c</fullName>
    <label>Day Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>