force-app/main/default/objects/Order_Itinerary__c/fields/Day_POE__c.field-meta.xml
<CustomField>
    <fullName>Day_POE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day POE</label>
    <referenceTo>Day_POE__c</referenceTo>
    <relationshipLabel>Order Itineraries</relationshipLabel>
    <relationshipName>Order_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>