force-app/main/default/objects/Order_Itinerary__c/fields/Day_Title__c.field-meta.xml
<CustomField>
    <fullName>Day_Title__c</fullName>
    <label>Day Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>