force-app/main/default/objects/Order_Itinerary__c/fields/error_msg__c.field-meta.xml
<CustomField>
    <fullName>error_msg__c</fullName>
    <label>Error Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>