force-app/main/default/objects/Order_Itinerary__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>Order Itineraries</relationshipLabel>
    <relationshipName>Order_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>