force-app/main/default/objects/Order_Itinerary__c/fields/itinerary_context__c.field-meta.xml
<CustomField>
    <fullName>itinerary_context__c</fullName>
    <label>Itinerary Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Stopover</fullName>
            </value>
            <value>
                <fullName>Main Package</fullName>
            </value>
            <value>
                <fullName>Pre Extension</fullName>
            </value>
            <value>
                <fullName>Post Extension</fullName>
            </value>
            <value>
                <fullName>Both Extensions</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Post Stopover</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Post Extension with Upgrade</fullName>
            </value>
            <value>
                <fullName>Pre Extension with Upgrade</fullName>
            </value>
            <value>
                <fullName>Both Extensions with Upgrade</fullName>
            </value>
            <value>
                <fullName>Arrive Early</fullName>
                <isActive>false</isActive>
                <label>Arrive Early</label>
            </value>
            <value>
                <fullName>Stay Behind</fullName>
                <isActive>false</isActive>
                <label>Stay Behind</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>