force-app/main/default/objects/Order_Itinerary__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>Note</label>
    <length>150</length>
    <type>Text</type>
</CustomField>