force-app/main/default/objects/Order_Itinerary__c/validationRules/Day_Date_equals_OI_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Date_equals_OI_Date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(day__r.date__c =  date__c)</errorConditionFormula>
    <errorMessage>The date for the group (Day) does not coincide with the date of the itinerary</errorMessage>
</ValidationRule>